@@ -1,3 +1,13 @@
+2021-01-17  Vincent Torri  <vincent.torri@gmail.com>
+
+	Implement mmap support for Windows (using MinGW).
+
+	* builds/windows/ftsystem.c: New file, based on the Unix version of
+	`ftsystem.c`.
+
+	* CMakeLists.txt (BASE_SRCS), builds/unix/configure.raw (FTSYS_SRC),
+	meson.build (ft2_sources): Add Windows-specific `ftsystem.c`.
+
 2021-01-17  Werner Lemberg  <wl@gnu.org>
 
 	* src/tools/update-copyright-year: Fix single-year entry handling.
